--- a/style.css
+++ b/style.css
@@ -1,96 +1,108 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     background-color: black;
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
-#post{
+#post {
     width: 35%;
     height: 600px;
-    background-color: white; 
-    margin:40px;
+    background-color: white;
+    margin: 40px;
 }
 
-#header{
-    display:flex;
-     width: 100%;
-     height: 60px;
-     align-items: center; 
- }
+#header {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    align-items: center;
+}
 
- #html-symbol{
+#html-symbol {
     margin-top: 2px;
     font-size: 2rem;
-    color:rgb(14, 13, 13);
+    color: rgb(14, 13, 13);
     position: relative;
     left: 15px;
 }
 
-#menu{
-    margin-top: 0px;
+#menu {
+    margin-top: 1px;
     font-size: 1.5rem;
-    color:rgb(14, 13, 13);
-    position: relative;
-    left: 315px;
-    
+    color: rgb(14, 13, 13);
+    position: absolute;
+    right: 32%;
+    padding-right: 1.5%;
+
 }
 
-#title{
-    margin-left: 30px;   
+
+#title {
+    margin-left: 30px;
 }
 
-#title p{
+#title p {
     font-size: small;
     margin: 0px;
 }
 
- .content{
-   width: 100%;
-   background-position: center center;
-   background-repeat: no-repeat;
-   background-size: cover;
+.content {
+    width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-img{
+img {
     width: 100%;
     height: 100%;
     margin: 0%;
- }
+}
 
- #footer{
-    width: 100%;   
-    color:black;
+#footer {
+    width: 100%;
+    color: black;
     margin: 15px 10px 15px 10px;
 }
 
-icons{
+icons {
     margin-top: 5px;
 }
 
 
-#heart, #comment, #send{
-   font-size: 1.5rem;
-   color:rgb(14, 13, 13);
-   position: relative;
-   left: 1px;
+#heart,
+#comment,
+#send {
+    font-size: 1.5rem;
+    color: rgb(14, 13, 13);
+    position: relative;
+    left: 1px;
 
 }
 
-#save{
+#save {
 
     font-size: 1.5rem;
-    color:rgb(14, 13, 13);
-    position: relative;
-    left: 312px;  
+    color: rgb(14, 13, 13);
+    position: absolute;
+    right: 32%;
+    padding-right: 1.5%;
 }
 
-p{
+p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.95rem;
-    margin-top: 20px;
-    margin-left: 5.5px;
-    text-align:justify
+    margin-left: 2.5px;
+    margin-top: 3%;
 }
 
+.description p {
+    font-size: 1.20vw;
+    padding: 1%;
+}
 
+.likes p {
+    font-size: 1.20vw;
+    padding-right: 1%;
+
+}
